Avoid usage of javax.xml.bind as it has been removed from JDK 11